Fixed Google Maps Bug. Won't render though because it can't when collapsed

--- a/UberScheduler/www/css/style.css
+++ b/UberScheduler/www/css/style.css
@@ -8,6 +8,10 @@
   height: 100%;
 }
 
+.map-ride-edit {
+  height: 50vh !important;
+}
+
 .current-location-div {
   position: absolute;
   left: 3%;
